Added Google Closure support

--- a/examples/index.html
+++ b/examples/index.html
@@ -17,8 +17,10 @@
 
         </script>
 
+        <!-- Closure library -->
+        <script src="../libs/closure-library/closure/goog/base.js"></script>
+
         <!-- Core -->
-        <script src="../src/index.js"></script>
         <script src="../src/Utils.js"></script>
         <script src="../src/Component.js"></script>
         <script src="../src/Entity.js"></script>
